# go-recordkeeper

./: .gitmodules  README.md  migrate-to-monorepo.sh
.github/workflows/: deno.yml  django-integration-tests.yml  django.yml  fastapi-integration-tests.yml  fastapi.yml  haskell-integration-tests.yml  haskell.yml  integration-tests.yml  kotlin.yml  rust.yml  vue.yml
blog/: .gitmodules  README.md  config.toml
blog/archetypes/: posts.md
blog/content/blog/: introduction.md
blog/content/posts/: 0-introduction.md  1-state-of-the-app.md  10-monorepo.md  11-introducing-haskell.md  12-ditching-servant.md  13-skipping-haskell.md  14-speeding-up-integration-tests.md  15-haskell-momentum.md  16-password-hashing.md  17-haskell-auth.md  18-go-logic-in-haskell.md  19-tangent-hardware-upgrade.md  24-rusting.md  (+20 more)
blog/public/: 404.html  index.html  index.xml  sitemap.xml
client/board/: .prettierignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
client/vue/: .env.development  .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
deploy/: .env.template  .gitignore  .gitmodules  README.md  build-devblog.sh  build-django.sh  build-vue.sh  build.sh  docker-compose.yml  generate-secret-key.sh  goban.service  install-service.sh  nginx.tmpl  pg_dump.sh  pg_load.sh  pull.sh
deploy/conf.d/: default.conf
deploy/vhost.d/: go.chiquit.ooo
server/: README.md
server/bash/: Dockerfile  README.md  docker-compose.yml  install.sh  run.sh
server/deno/: Dockerfile  deno.jsonc  deno_install.sh  docker-compose.yml  main.ts  main_bench.ts
server/django/: .env.template  Dockerfile  README.md  build-image.sh  docker-compose.yml  manage.py  pyproject.toml  setup.py  tox.ini
server/fastapi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/fastapi/goban_server_fastapi/: auth.py  db.py  main.py  models.py  rest.py  settings.py
server/fastapi/goban_server_fastapi/auth/: __init__.py  jwt.py  models.py  password.py  rest.py
server/fastapi/goban_server_fastapi/records/: __init__.py  board.py  models.py
server/fastapi/goban_server_fastapi/records/rest/: __init__.py  create.py  delete.py  download.py  get.py  list.py  pass_turn.py  play.py  undo.py  update.py
server/fastapi/goban_server_fastapi/test/: conftest.py  test_auth.py  test_record_create.py  test_record_delete.py  test_record_download.py  test_record_get.py  test_record_list.py  test_record_pass.py  test_record_play.py  test_record_undo.py  test_record_update.py  test_records.py
server/fastapi/goban_server_fastapi/users/: __init__.py  auth.py  models.py  rest.py
server/haskell/: CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  go-recordkeeper.cabal  package.yaml  stack.yaml
server/kotlin/: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
server/rust/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/rust/.cargo/: config.toml
server/rust/src/: db.rs  main.rs
server/rust/src/auth/: get_current_user.rs  jwt.rs  login.rs  mod.rs  password.rs  register.rs
server/rust/src/record/: create.rs  delete.rs  download.rs  get.rs  go.rs  list.rs  mod.rs  pass.rs  play.rs  undo.rs  update.rs
test/: .env.template  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  pyproject.toml
test/goban_server_test/: conftest.py  main.py  test_auth.py  test_compatible_login.py  test_foo.py  test_records.py  test_records_create.py  test_records_delete.py  test_records_download.py  test_records_get.py  test_records_list.py  test_records_pass.py  test_records_play.py  test_records_undo.py  test_records_update.py
(+140 files in other folders)
