[tool.poetry]
name = "goban-server-test"
version = "0.0.1"
description = "Integration testing for goban-server implementations"
authors = ["Daniel Chiquito <daniel.chiquito@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "goban_server_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pytest-faker = "^2.0.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
test = 'goban_server_test.main:run'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
