[tool.poetry]
name = "goban-server-fastapi"
version = "0.0.1"
description = ""
authors = ["Daniel Chiquito <daniel.chiquito@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "goban_server_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
