[tool.poetry]
name = "goban-server-fastapi"
version = "0.0.1"
description = ""
authors = ["Daniel Chiquito <daniel.chiquito@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "goban_server_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
PyJWT = "^2.5.0"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pytest = "^7.1.3"

[tool.poetry.scripts]
serve = "uvicorn goban_server_fastapi.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
