[package]
name = "go-recordkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
base64 = "0.21.0"
hex = "0.4.3"
pbkdf2 = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full"] }
tokio-postgres = "0.7.7"
