[package]
name = "go-recordkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
jsonwebtoken = "8.3.0"
pbkdf2 = "0.12.1"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
validator = "0.16.0"
